@@ -1,3 +1,8 @@
+2004-09-29  Bruno Haible  <bruno@clisp.org>
+
+	* fill-out.lisp (stream-start-s-expression, stream-end-s-expression):
+	No need for EVAL-WHEN (COMPILE).
+
 2004-09-20  Bruno Haible  <bruno@clisp.org>
 
 	* documentation.lisp (documentation, (setf documentation)): Define
